Continued work on neo4j wrapper